...
    <string name="decimal_separator">,</string>
    <string name="navigate_up_txt">Desplazarse hacia arriba</string>
    <!--Menús-->
    <!--Messages-->
    <string name="no_internet_conn_toast">No hay conexión de red disponible.</string>
    <string name="exception_generic_message">No podemos continuar. Inténtalo en unos segundos nuevamente.</string>
    <string name="error_validation_msg">Los siguientes datos no son válidos: </string>
    <!-- Google Cloud Messages -->
    <string name="gcm_message_generic_subtext">Pulsa aquí para ver los detalles.</string>
    <!--******************************************************************************-->
    <!--                                  USUARIO                                     -->
    <!--******************************************************************************-->
    <!-- ============================= MENUS ================================= -->
...
    <string name="user_data_ac_mn">Tu usuario</string>
    <!-- ============================ MESSAGES ============================== -->
    <string name="send_password_by_mail_dialog">¿Deseas que te enviemos una nueva contraseña por correo electrónico?</string>
    <string name="send_password_by_mail_YES">Enviádmela</string>
    <string name="send_password_by_mail_NO">No la enviéis</string>
    <string name="login_wrong_no_mail">"Busca tu comunidad y regístrate.\nSi no existe, regístrala en 'Nueva comunidad'."</string>
    <string name="password_wrong">La contraseña no se corresponde con tu usuario.\nSi no la recuerdas,
        selecciona en el menú la opción para renovarla.</string>
    <string name="password_wrong_in_login">La contraseña no se corresponde con tu usuario.</string>
    <string name="password_new_in_login">Te hemos enviado tu nueva contraseña. Haz login, nuevamente, con ella.</string>
    <string name="user_without_signedUp">"Haz login. O busca tu comunidad y regístrate.\nSi no existe, regístrala en 'Nueva comunidad'."</string>
    <string name="user_data_not_modified_msg">No hemos podido modificar tus datos.</string>
    <!-- ================= DeleteMeAc ===================== -->
...
    <string name="login_label">Login</string>
    <string name="login_ac_rotulo">Inicio de sesión</string>
    <string name="login_ac_button_txt">Valida tus datos</string>
    <!-- ================== PasswordChangeAc ============== -->
    <string name="password_change_ac_label">Didekin</string>
    <string name="password_change_ac_rotulo">Nueva contraseña</string>
    <string name="password_change_ac_button_txt">Cambia tu contraseña</string>
    <!-- ........... RegUserFr ......... -->
    <string name="reg_usuario_rotulo">Tus datos</string>
    <string name="alias">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="password_different"> (no coinciden)</string>
    <string name="usuario_password_hint">Contraseña: 6–60 letras, números, _ </string>
    <string name="usuario_password_confirm_hint">Confirmación contraseña</string>
    <string name="usuario_alias_hint">Nombre: 6–30 letras, números, _</string>
    <string name="email_hint">Correo electrónico</string>
    <!-- ================= UserDataAc ===================== -->
    <string name="user_data_ac_label">Tus datos</string>
    <string name="user_data_ac_cambios_text">Sobrescribe el dato a modificar</string>
    <string name="user_data_ac_password_txt">Valida los cambios introduciendo tu contraseña</string>
    <string name="user_data_ac_password_hint">Contraseña actual</string>
    <string name="user_data_modif_button_rot">Modifica tus datos</string>
</resources>

