...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/appbar_include_design"/>

    <LinearLayout
        android:id="@+id/password_change_ac_layout"
        style="@style/baseLayout.withPadding"
        android:layout_marginTop="@dimen/app_bar_bottom_margin"
        tools:context="com.didekindroid.com.didekinaar.activity.PasswordChangeAc">

        <include
            android:id="@+id/user_data_ac_include"
...
            layout="@layout/password_include"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

        <Button
            android:id="@+id/password_change_ac_button"
            style="@style/textBase.acButton1"
            android:layout_gravity="center_horizontal"
            android:text="@string/password_change_ac_button_txt"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
