...

    <android.support.design.widget.CoordinatorLayout style="@style/baseLayout">

        <include layout="@layout/appbar_include_design"/>

        <LinearLayout
            android:id="@+id/user_data_ac_layout"
            style="@style/baseLayout.withPadding"
            android:layout_marginTop="@dimen/app_bar_bottom_margin"
            tools:context="com.didekindroid.com.didekinaar.usuario.UserDataAc">

            <TextView
                android:id="@+id/user_data_ac_cambios_rot"
...
                style="@style/textBase.textFieldLabel2"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/user_data_ac_password_txt"/>

            <EditText
                android:id="@+id/user_data_ac_password_ediT"
                style="@style/textBase.editField.password"
                android:hint="@string/user_data_ac_password_hint"/>

            <Button
                android:id="@+id/user_data_modif_button"
                style="@style/textBase.acButton1"
                android:layout_gravity="center_horizontal"
                android:text="@string/user_data_modif_button_rot"/>

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
...
